Resolved the issue of stretched images and clear filter

--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,6 @@ span {
 }
 
 
+.pswp__img{
+  object-fit: contain;
+}
